# shopkeeps_fastapi

./: alembic.ini  database.db  main.py  pyproject.toml  requirements.txt  yugioh_card_codes.txt
funcs/: file_workrflows.py  image_urls.json
migrations/: env.py
migrations/versions/: 125f059da393_add_personality_and_shop_type_to_.py  47904079d933_add_image_url_to_shopkeep.py  77a0026fb3b5_add_sex_to_shopkeep.py  7e857abd9df8_initial_setup.py  b1e6c3ccdc77_initial_migration.py  d7f6e4636704_add_location_to_shopkeep.py
models/: db_setup.py  shop_keep.py
prompts/: sk_prompts.py
