[project]
name = "astral-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "colorama>=0.4.6",
    "fastapi-cors>=0.0.6",
    "fastapi[standard]>=0.115.6",
    "openai>=1.59.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.6",
    "sqlmodel>=0.0.22",
]
